noticeboard made responsive

--- a/src/Components/NoticeBoard/NoticeBoard.scss
+++ b/src/Components/NoticeBoard/NoticeBoard.scss
@@ -17,3 +17,14 @@
     color: $lightGrey;
   }
 }
+.notice-text{
+  font-size: initial;
+}
+.LiveClasses__Card{
+ width: 80%;
+}
+// @media screen and (max-width:400px){
+//   .notice-text{
+//     font-size: 1rem;
+//   }
+// }
