font-size made responsive and new branch alpha created

--- a/src/Components/Common/DashboardCards/DashboardCards.scss
+++ b/src/Components/Common/DashboardCards/DashboardCards.scss
@@ -19,3 +19,10 @@
   font-size: x-large;
   font-weight: 200;
 }
+
+@media screen and (max-width: 450px) {
+  .DashboardCard_heading {
+    font-size: 20px;
+  }
+
+}
