--- a/src/scss/_floatingLabel.scss
+++ b/src/scss/_floatingLabel.scss
@@ -26,12 +26,18 @@
 .has-float-label > input[type='password']:focus + span,
 .has-float-label > input[type='number']:focus + span,
 .has-float-label > input[type='date']:focus + span,
-.has-float-label > input[type='time']:focus + span {
+.has-float-label > input[type='time']:focus + span,
+.has-float-label > textarea:focus + span {
   color: var(--primary-blue);
 }
 
+.has-float-label > textarea + span {
+  color: rgba(0, 0, 0, 0.87);
+}
+
 .has-float-label label::after,
-.has-float-label > span::after {
+.has-float-label > span::after,
+.has-float-label > textarea::after {
   content: ' ';
   display: block;
   position: absolute;
@@ -124,7 +130,8 @@ input[readonly].form-control {
 .has-float-label > input[type='date']:focus,
 .has-float-label > input[type='password']:focus,
 .has-float-label > input[type='number']:focus,
-.has-float-label > input[type='time']:focus {
+.has-float-label > input[type='time']:focus,
+.has-float-label > textarea:focus {
   border-color: var(--primary-blue);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
   outline: 0 none;
@@ -141,4 +148,11 @@ input[readonly].form-control {
   color: rgba(0, 0, 0, 0.87);
   font-family: 'Montserrat-SemiBold';
   height: 32px;
+}
+
+.has-float-label > textarea {
+  border-color: rgba(0, 0, 0, 0.54);
+  border-radius: 5px;
+  color: rgba(0, 0, 0, 0.87);
+  font-family: 'Montserrat-SemiBold';
 }
