--- a/src/Components/Login/DummyDashboard.scss
+++ b/src/Components/Login/DummyDashboard.scss
@@ -1,5 +1,61 @@
-.brand_tagline{
-    text-align: center;
-    font-size: 12px;
+.Dummy {
+  @import '../../scss/bootstrap';
+
+  &__coachingName {
+    font-size: $spacer * 1.5;
+    line-height: 29px;
+    font-family: $extraBold;
+    color: $white;
   }
-  
+
+  &__tagline {
+    color: $white;
+    font-family: $regular;
+    line-height: 19px;
+  }
+
+  &__aboutus {
+    font-family: $bold;
+    font-size: $spacer * 1.2;
+    line-height: 24px;
+    color: #000;
+  }
+
+  &__aboutData {
+    font-family: $regular;
+    font-size: $spacer * 0.875;
+    line-height: 18px;
+  }
+
+  &__connect {
+    font-family: $medium;
+    font-size: $spacer * 0.875;
+    line-height: 20px;
+  }
+
+  &__socialLinks {
+    width: 36px;
+    height: 36px;
+  }
+
+  &__joinUs {
+    font-family: $bold;
+    line-height: 20px;
+    font-size: $spacer * 0.875;
+    color: $headingGrey;
+  }
+
+  &__joinDetails {
+    font-family: $medium;
+    line-height: 15px;
+    color: $dashboardBlack;
+    font-size: $spacer * 0.75;
+  }
+
+  &__joinSmall {
+    font-family: $regular;
+    line-height: 13px;
+    color: $dashboardBlack;
+    font-size: $spacer * 0.625;
+  }
+}
