--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -98,7 +98,7 @@
 
     @include media-breakpoint-down(md) {
       font-size: $spacer * 0.75;
-      padding-bottom: 0;
+      padding-bottom: 5px;
     }
   }
 
@@ -159,14 +159,14 @@
   &__notice {
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
     border-radius: 5px;
-    width: 100%;
+    // width: 100%;
     margin-bottom: 10px;
   }
 
   &__noticeImage {
-    height: auto;
+    height: 50px;
     width: 50px;
-    border-radius: 25px;
+    border-radius: 50%;
   }
 
   &__noticeSubHeading {
