--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -9,7 +9,7 @@
 
   &__jumbo {
     width: 50%;
-    max-height: 20vh;
+    max-width: 300px;
     @include media-breakpoint-down(md) {
       width: 75%;
     }
