--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -344,14 +344,16 @@
   font-family: 'Montserrat-Medium';
   height: 55px;
   width: 236px;
-  position: fixed;
-  bottom: 30px;
   background-color: var(--primary-blue);
   box-shadow: 0px 6px 10px 0px var(--lighter-blue);
   border-radius: 8000px;
   left: 0;
   right: 0;
   margin: 5% auto;
+  margin-top: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn-loginPrimary {
@@ -377,4 +379,10 @@
   height: 0.5rem;
   background-color: rgba(0, 0, 0, 0.11);
   border-radius: 5px;
+}
+
+@media (min-width: 1024px) {
+  .btn-JumboLogin {
+    margin-top: 100px;
+  }
 }
