display page improved

--- a/src/Components/Common/ScrollableCards/ScrollableCards.scss
+++ b/src/Components/Common/ScrollableCards/ScrollableCards.scss
@@ -59,6 +59,15 @@
     }
   }
 
+  &__cardFlex{
+    flex-direction: row-reverse;
+    min-height: 113px;
+
+    @include media-breakpoint-up(md){
+      flex-direction: row;
+    }
+  }
+
   /****************************Course Cards**********/
 
   &__courseCardContent {
