--- a/src/Components/Common/ScrollableCards/ScrollableCards.scss
+++ b/src/Components/Common/ScrollableCards/ScrollableCards.scss
@@ -109,6 +109,10 @@
     color: $headingGrey;
     line-height: 15px;
     text-align: left;
+
+    @include media-breakpoint-up(sm){
+      font-size: $spacer * 0.85;
+    }
   }
 
   &__courseCardSubHeading {
@@ -120,20 +124,29 @@
   }
 
   &__emoji {
-    width: $spacer * 0.5;
-    height: $spacer * 0.5;
+    width: $spacer !important;
+    height: $spacer !important;
     color: $dirtyYellow;
+
+    @include media-breakpoint-down(sm){
+      width: 15px !important;
+      height: 15px !important;
+    }
   }
 
   &__bestSeller {
     background-color: $dirtyYellow;
-    text-align: left;
+    text-align: center;
     border-radius: 2px;
-    font-size: $spacer * 0.5;
+    font-size: $spacer * 0.4;
     line-height: 11px;
     color: $headingGrey;
     font-family: $bold;
-    width: 30%;
+    width: 38%;
+
+    @include media-breakpoint-up(sm){
+      width: 20% ;
+    }
   }
 
   &__viewAll {
