--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -35,6 +35,12 @@
     height: 61px;
     object-fit: cover;
     border-radius: 5px;
+
+    @include media-breakpoint-up(md){
+      width: 150px;
+      height: 80px;
+    }
+
   }
 
   // &__playerWrapper {
@@ -119,6 +125,77 @@
   &__slimButton {
     height: 20px;
     width: 74px;
+  }
+
+  &__container{
+    width: 80%;
+    margin: auto;
+    margin-top: 5rem;
+    padding-left: 10%;
+     @include media-breakpoint-down(sm){
+       width: 90%;
+     }
+     @include media-breakpoint-down(md){
+      padding-left: 0;
+    }
+  }
+
+  &__image{
+    @include media-breakpoint-down(sm){
+      padding-left: 0;
+    }
+  }
+
+  &__displayImage{
+    width: 95px;
+    height: 61px;
+
+    @include media-breakpoint-up(sm){
+     width: 150px;
+     height: 93px;
+    }
+  }
+
+  &__buycourseContainer{
+    width: 80%;
+    margin: auto;
+
+    @include media-breakpoint-down(md){
+      width: 90%;
+    }
+  }
+
+  &__videoplayer{
+    height: 180px;
+    width: 273px;
+
+    @include media-breakpoint-up(sm){
+      width: 93%;
+      height: 350px;
+    }
+  }
+  &__imageRow{
+    @include media-breakpoint-down(md){
+      padding:0;
+    }
+  }
+
+  &__teacherCourse{
+    width: 75%;
+    margin:auto;
+    margin-top: 1rem;
+
+    @include media-breakpoint-down(sm){
+      width: 95%;
+    }
+  }
+
+  &__iconImage{
+    text-align: center;
+
+    @include media-breakpoint-down(sm){
+      text-align: left;
+    }
   }
 }
 
