--- a/src/Components/Fees/Fees.scss
+++ b/src/Components/Fees/Fees.scss
@@ -12,11 +12,22 @@
 
   &__avatar {
     border-radius: 50%;
+    height: 38px;
+    width: 38px;
+
+    @include media-breakpoint-up(sm){
+      height: 50px;
+      width: 50px;
+    }
   }
 
   &__avatarHeading {
     font-family: 'Montserrat-SemiBold';
     font-size: $spacer * 0.75;
+
+    @include media-breakpoint-up(sm){
+      font-size: $spacer * 0.875;
+    }
   }
 
   &__onlineIcon {
@@ -27,6 +38,9 @@
   &__avatarStatus {
     font-family: 'Montserrat-Light';
     font-size: $spacer * 0.625;
+    @include media-breakpoint-up(sm){
+      font-size: $spacer * 0.725;
+    }
   }
 
   &__navStatus {
@@ -34,8 +48,24 @@
     font-size: $spacer * 0.75;
     line-height: 15px;
     color: $dashboardBlack;
-  }
 
+    @include media-breakpoint-up(sm){
+      font-size: $spacer * 0.85;
+    }
+    
+  }
+  &_navStatusContainer{
+    width: 100%;
+    position:fixed;
+    z-index: 10000;
+      
+    @include media-breakpoint-up(sm){
+      width: 75%;
+      margin: auto;
+      left:13%;
+    }
+  }
+  
   &__navStatus > span {
     color: $strongRed;
   }
@@ -51,6 +81,11 @@
     overflow: scroll;
     box-shadow: 0px -5px 6px 0px rgba(0, 0, 0, 0.16);
     padding-bottom: $spacer * 12.5;
+    margin-top: 3.5rem;
+    @include media-breakpoint-up(sm){
+      width: 75%;
+      left: 13%;
+    }
   }
 
   &__feeCard {
@@ -61,6 +96,10 @@
     width: $spacer * 14.375;
     background: rgba(26, 255, 0, 0.1);
     background: linear-gradient(90deg, rgba(26, 255, 0, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%);
+
+    @include media-breakpoint-up(sm){
+      width: 50%;
+    }
   }
 
   &__cardFooter {
@@ -121,7 +160,7 @@
     bottom: 0;
     z-index: 999;
     width: 100%;
-    height: 10%;
+    height: 12%;
     box-shadow: 0px -5px 6px 0px rgba(0, 0, 0, 0.16);
     background-color: $white;
   }
@@ -177,6 +216,11 @@
     color: $feesGreen;
   }
 
+  &__orderDetailHeading{
+    font-family: $semiBold;
+    font-size: $spacer*1;
+  }
+
   &__orderSummary {
     font-family: $semiBold;
     color: $dashboardGrey;
@@ -206,6 +250,20 @@
     font-family: $medium;
     line-height: 13px;
     font-size: $spacer * 0.625;
+  }
+  &__PayButton{
+    @include media-breakpoint-up(sm){
+      width: 25%;
+    }
+  }
+
+  &__orderDetailsContainer{
+    width: 75%;
+    margin: auto;
+
+    @include media-breakpoint-down(sm){
+      width: 90%;
+    }
   }
 }
 
@@ -281,4 +339,7 @@ Changes styles for the label following the radio checkbox that has focus
 
 .react-datepicker-popper {
   z-index: 999;
+}
+.Fees__overlay::-webkit-scrollbar{
+  display: none;
 }
