--- a/src/Components/Common/ScrollableCards/ScrollableCards.scss
+++ b/src/Components/Common/ScrollableCards/ScrollableCards.scss
@@ -176,6 +176,10 @@
     line-height: 15px;
     color: $dashboardBlack;
     font-family: $semiBold;
+
+    @include media-breakpoint-up(sm){
+      font-size: $spacer * 0.825;
+    }
   }
 
   /*****************************Analysis Cards**********************************/
