--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -9,23 +9,28 @@
 
   &__jumbo {
     width: 50%;
+    background: transparent;
     max-width: 300px;
-    @include media-breakpoint-down(md) {
-      width: 75%;
-    }
+    max-height: 25vh;
+    width: auto;
+    // @include media-breakpoint-down(md) {
+    //   max-height: 25vh;
+    //   width: auto;
+    // }
   }
 
   &__footer {
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+    padding-bottom: 30px;
+
     @include media-breakpoint-down(md) {
-      margin-top: 30vh;
+      height: 40px;
     }
 
     @include media-breakpoint-up(md) {
-      position: absolute;
-      bottom: 30px;
-      width: 100%;
       height: 80px;
-      padding-bottom: 30px;
     }
     text-align: center;
   }
