--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -19,6 +19,7 @@
     font-family: 'Montserrat-Regular';
     line-height: 29px;
     color: $headingGrey;
+    padding-top: 0.875rem;
 
     @include media-breakpoint-up(sm) {
       font-size: 1.75rem;
