--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -13,6 +13,10 @@
     height: $spacer * 5;
     width: $spacer * 5;
     border-radius: 10px;
+
+    @include media-breakpoint-up(sm){
+      padding-left: 20px;
+    }
   }
 
   &__headingText {
