course video/Course image issues solved

--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -274,3 +274,10 @@
   color: var(--primary-blue);
   line-height: 18px;
 }
+
+.react-thumbnail-generator > img {
+  width: 95px;
+  height: 60px;
+  border-radius: 5px;
+  display: none;
+}
