--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -187,12 +187,13 @@
   }
 
   &__noticeText {
-    background-color: var(--lightest-blue);
+    background-color: var(--primary-blue);
     font-family: 'Montserrat-Medium';
     font-size: $spacer * 0.75;
     color: $headingGrey;
     line-height: 15px;
     border-radius: 0 0 5px 5px;
+    opacity: 0.75;
   }
 
   &__admissionsBlueText {
