--- a/src/Components/Login/SignIn/SignIn.scss
+++ b/src/Components/Login/SignIn/SignIn.scss
@@ -46,10 +46,10 @@
     letter-spacing: 0.26px;
   }
 
-  &__UserCard{
+  &__UserCard {
     width: 50%;
-    @include media-breakpoint-down(xs){
-      width: 80%
+    @include media-breakpoint-down(xs) {
+      width: 80%;
     }
   }
 }
