Teacher cannot subscribe or pay now & Dashboardcards have now dynamic icons and colours

--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -245,6 +245,10 @@
     background-color: white;
     z-index: 10000;
   }
+  &__twoButtons {
+    position: absolute;
+    right: -35px;
+  }
 }
 
 #limited + label {
