logo icon made responsive

--- a/src/Components/Login/Preloader/Preloader.scss
+++ b/src/Components/Login/Preloader/Preloader.scss
@@ -11,3 +11,9 @@
     line-height: $spacer * 1.5;
   }
 }
+.Login__jumbo {
+  width: 200px;
+  height: auto;
+  border-radius: 10px;
+  margin: 20px auto;
+}
