--- a/src/Components/Common/VideoPlayer/VideoPlayer.scss
+++ b/src/Components/Common/VideoPlayer/VideoPlayer.scss
@@ -9,3 +9,10 @@
     pointer-events: none;
   }
 }
+@media screen and (min-width: 800px) and (max-height: 1000px) {
+  .plyrComponent {
+    height: 100vh;
+
+    margin: auto;
+  }
+}
