--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -285,3 +285,10 @@
   border-radius: 5px;
   display: none;
 }
+@media screen and (min-width: 800px) and (max-height: 1000px) {
+  .plyrComponent__myCourse {
+    height: 90vh;
+
+    margin: auto;
+  }
+}
