--- a/src/Components/Login/Welcome/Welcome.scss
+++ b/src/Components/Login/Welcome/Welcome.scss
@@ -211,6 +211,27 @@
   margin-top: 2rem;
 }
 
+@media screen and (min-width: 800px) and (max-height: 1000px) {
+  .btn-JumboLogin {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+  }
+  .Welcome__carouselSubHeading {
+    margin-top: 20px !important;
+  }
+}
+@media screen and (min-height: 1000px) {
+  .img-fluid {
+    width: 60%;
+  }
+  .Welcome__carouselSubHeading {
+    font-size: 180%;
+  }
+  .Welcome__carouselHeading {
+    font-size: 220%;
+  }
+}
+
 @keyframes slidein {
   0% {
     width: 8px;
