--- a/src/Components/Common/VideoPlayer/VideoPlayer.scss
+++ b/src/Components/Common/VideoPlayer/VideoPlayer.scss
@@ -10,9 +10,8 @@
   }
 }
 @media screen and (min-width: 800px) and (max-height: 1000px) {
-  .plyrComponent {
-    height: 100vh;
-
+  .plyrComponent__overall {
+    height: 90vh;
     margin: auto;
   }
 }
