live classes new design started

--- a/src/Components/Live Classes/LiveClasses.scss
+++ b/src/Components/Live Classes/LiveClasses.scss
@@ -2,7 +2,7 @@
   @import '../../scss/bootstrap';
 
   // background-color: var(--lightest-blue);
-  height: 100vh;
+  height: 100%;
   overflow: scroll;
   overflow-x: hidden;
 
