zoom in and out and video enabled in testimonials

--- a/src/Components/DisplayPage/DisplayPage.scss
+++ b/src/Components/DisplayPage/DisplayPage.scss
@@ -28,6 +28,25 @@
   }
 }
 
+.testimonialVideoTag {
+  width: 450px !important;
+  height: auto !important;
+}
+
+@media screen and (max-width: 800px) {
+  .testimonialVideoTag {
+    width: 300px !important;
+    height: auto !important;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .testimonialVideoTag {
+    width: 220px !important;
+    height: auto !important;
+  }
+}
+
 .Display .btn-courseBlueOnWhite {
   width: 75%;
 }
