--- a/src/Components/Fees/Fees.scss
+++ b/src/Components/Fees/Fees.scss
@@ -365,6 +365,13 @@
       left: 0;
     }
   }
+  &__footnoteContainer {
+    text-align: center;
+    width: 60%;
+    margin: auto;
+    font-size: small;
+    color: gray;
+  }
 }
 
 .vertical-timeline::before {
@@ -442,4 +449,26 @@ Changes styles for the label following the radio checkbox that has focus
 }
 .Fees__overlay::-webkit-scrollbar {
   display: none;
+}
+
+.cashfreeModalOrderName {
+  font-family: 'Montserrat-Regular';
+}
+.cashfreeModalOrderAmount {
+  font-family: 'Montserrat-Bold';
+  color: var(--primary-blue);
+}
+.cashfreeCancelBtn {
+  display: flex;
+  align-items: center;
+  padding: 7px 16px;
+  background-color: white;
+  border-radius: 5px;
+  // width: 100%;
+  outline: none;
+  border: transparent;
+  cursor: pointer;
+  color: white;
+  color: gray;
+  font-family: 'Montserrat-Regular';
 }
