--- a/src/Components/Common/PageHeader/PageHeader.scss
+++ b/src/Components/Common/PageHeader/PageHeader.scss
@@ -27,3 +27,10 @@
     color: $dashboardGrey;
   }
 }
+.notFixedPageHeader {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: 999;
+}
