--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -250,6 +250,20 @@
   font-size: 15px;
 }
 
+.floatingChatButtonDashboard {
+  position: fixed;
+  cursor: pointer;
+  outline: none;
+  background-color: white;
+  border-radius: 100px;
+  bottom: 18px;
+  right: 14px;
+  padding: 12px 50px;
+  border: transparent;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.46);
+  z-index: 50;
+}
+
 // @media screen and (min-width: 768px) {
 //   .DashboardCard_Image {
 //     padding-left: 0px;
