--- a/src/Components/Common/ScrollableCards/ScrollableCards.scss
+++ b/src/Components/Common/ScrollableCards/ScrollableCards.scss
@@ -21,12 +21,13 @@
   &__aspectCardContent {
     min-width: 200px;
     height: 113px;
-    border-radius: 5px;
+    border-radius: 10px;
   }
 
   &__aspectCardBig {
     min-width: 315px;
     height: 177px;
+    // border-radius: 10px;
   }
 
   &__card::-webkit-scrollbar {
@@ -71,16 +72,16 @@
   /****************************Course Cards**********/
 
   &__courseCardContent {
-    min-width: 220px;
+    min-width: 190px;
     margin: 5px;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
-    border-radius: 20px;
-    min-height: 264px;
-    margin: 20px;
+    border-radius: 10px;
+    min-height: 232px;
+    margin: 20px 10px;
   }
 
   &__courseCard {
-    background-image: linear-gradient(to top, #888888, #a0a0a0, #bababa, #e4e4e4, #efefef);
+    background-image: linear-gradient(#f8f8f8, #9b9b9b);
     min-width: 100%;
     min-height: 200px;
     display: flex;
@@ -88,10 +89,14 @@
     overflow-x: auto;
   }
 
+  &__courseCard::-webkit-scrollbar {
+    display: none;
+  }
+
   &__courseImage {
     // max-width: 100%;
     width: 100%;
-    border-radius: 20px 20px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
     height: 150px;
     object-fit: cover;
   }
@@ -99,6 +104,8 @@
   &__subHeadTextUnderHeading {
     font-family: $medium;
     color: black;
+    display: 'flex';
+    flex-direction: column;
   }
 
   &__coursesInitialHeading {
@@ -116,7 +123,9 @@
   &__viewAllButtonForCards {
     outline: none;
     cursor: pointer;
-    width: 150px;
+    display: flex;
+    align-items: center;
+    width: fit-content;
     background-color: transparent;
     border: none;
     font-size: 12px;
@@ -179,7 +188,7 @@
     line-height: 11px;
     color: $headingGrey;
     font-family: $bold;
-    width: 38%;
+    width: fit-content !important;
 
     @include media-breakpoint-up(sm) {
       width: 20%;
@@ -241,6 +250,12 @@
     font-size: $spacer * 1.5;
   }
 }
+.smallTextUnderHeading {
+  font-size: 12px;
+  font-family: 'Montserrat-Regular';
+  width: 60%;
+  margin-bottom: 18px;
+}
 @media screen and (min-width: 800px) {
   .course-card {
     margin-right: 40px;
@@ -248,7 +263,7 @@
 }
 @media screen and (max-width: 335px) {
   .smallTextUnderHeading {
-    font-size: 12px;
+    font-size: 10px;
   }
   .Scrollable__coursesInitialHeading {
     font-size: 16px;
