--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -5,27 +5,37 @@
     color: $headingGrey;
     line-height: $spacer * 1.25;
     font-family: $bold;
+    font-size: 14px;
   }
 
   &__subHeading {
-    font-family: 'Montserrat-Regular';
+    font-family: 'Montserrat-Medium';
     line-height: 20px;
     color: $dashboardBlack;
     font-size: 0.85rem;
+    letter-spacing: 0.24px;
   }
 
   &__courseCardHeading {
-    font-size: $spacer * 1.25;
-    font-family: 'Montserrat-Bold';
+    font-size: 16px;
+    font-family: 'Montserrat-SemiBold';
+  }
+  &__Price {
+    font-size: 12px;
+    font-family: 'Montserrat-Medium';
+    color: black;
   }
 
   &__accordionHeading {
     border-radius: 5px;
-    border: 1px solid $dashboardGrey;
+    border: transparent;
+    // border: 1px solid $dashboardGrey;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
     font-family: $medium;
     font-size: $spacer * 0.875;
     line-height: $spacer * 1.25;
+    background-color: rgba(243, 241, 241, 0.2);
+    margin-bottom: 22px !important;
   }
 
   &__couponHeading {
@@ -171,7 +181,7 @@
   &__buycourseContainer {
     width: 80%;
     margin: auto;
-
+    height: calc(100vh - 75px);
     @include media-breakpoint-down(md) {
       width: 90%;
     }
@@ -183,6 +193,7 @@
     justify-content: center;
     margin: auto;
     width: 100%;
+    background-color: black;
 
     @include media-breakpoint-up(sm) {
       width: 100%;
@@ -206,6 +217,16 @@
   &__imageRow {
     @include media-breakpoint-down(md) {
       padding: 0;
+    }
+  }
+  &__emoji {
+    width: $spacer !important;
+    height: $spacer !important;
+    color: $dirtyYellow;
+
+    @include media-breakpoint-down(sm) {
+      width: 12px !important;
+      height: 12px !important;
     }
   }
 
@@ -267,27 +288,125 @@
     background-color: white;
     z-index: 100;
   }
+
   &__twoButtons {
     position: absolute;
     right: -35px;
   }
 }
 
+#contentTab:hover {
+  color: black;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+}
+
+.playIconCourse {
+  color: #ffffffb3 !important;
+  font-size: 145px !important;
+  position: relative !important;
+  width: 30% !important;
+  margin: auto !important;
+  background-color: transparent !important;
+  // margin-top: 50%;
+  margin-left: -65% !important;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.playIconCourse:hover {
+  color: #ffffffd0 !important;
+}
+
+// #idForScroll {
+//   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
+// }
+.verySmallGrayText {
+  font-size: 10px;
+  color: #0000008a;
+}
+#idForScroll:hover {
+  color: black;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+}
+
+.addReviewsBigIcon {
+  font-size: 4.2rem !important;
+  color: #fbe244 !important;
+}
+
+@media screen and (max-width: 355px) {
+  .addReviewsBigIcon {
+    font-size: 3.2rem !important;
+  }
+}
+
+.addReviewTextArea {
+  width: 98%;
+  margin: auto;
+}
+
+.addReviewTextArea:-ms-input-placeholder {
+  color: gray !important;
+}
+
+#ReviewTab:hover {
+  color: black;
+  border-top: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+}
+.topMargin {
+  margin-top: 50px !important;
+}
+.leftAlignText {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
 .courseNameContainer {
   display: flex;
   width: 180% !important;
   margin: auto 0px !important;
 }
-
+.verySmallText {
+  font-size: 10px;
+  color: gray;
+}
+.scrollableTabsForCourses .form-control::placeholder {
+  color: rgb(182, 180, 180) !important;
+  font-family: 'Montserrat-Medium';
+  font-size: 14px;
+}
+.scrollableTabsForCourses .form-control {
+  color: black !important;
+  font-family: 'Montserrat-SemiBold';
+  font-size: 14px;
+}
 .shareButtonForCourse {
-  position: absolute;
+  position: fixed;
   z-index: 999;
+  top: 0px;
   right: 0%;
   outline: none;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.16);
   border: transparent;
   border-radius: 0px 0px 0px 100px;
+}
+.backButtonForCoursesPage {
+  background-color: rgba(0, 0, 0, 0.16);
+  width: 68px;
+  height: 52px;
+  border: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  border-radius: 0px 0px 100px 0px;
 }
 .Scrollable__smallText {
   font-size: 12px;
@@ -309,7 +428,11 @@
 }
 
 .Scrollable__courseCardSubHeading {
-  width: 110%;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  margin: auto 0px;
 }
 
 .coursesHeadingContainer {
@@ -317,13 +440,36 @@
   left: 20px !important;
 }
 
+.scrollableContentOfCourses {
+  display: flex;
+  overflow-x: auto;
+  // max-width: 200px;
+  justify-content: flex-start;
+  font-family: 'Montserrat-Bold';
+  color: rgb(66, 66, 66);
+}
+.scrollableContentOfCourses::-webkit-scrollbar {
+  display: none;
+}
+.scrollableContentOfCourses_item {
+  display: flex;
+  margin: 10px 25px 10px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.scrollableContentOfCourses_item p {
+  margin: 0px;
+}
 #forever + label {
   font-family: 'Montserrat-Regular';
   font-size: 14px;
   color: var(--primary-blue);
   line-height: 18px;
 }
-
+.courseContentCardHeading {
+  font-family: 'Montserrat-Bold';
+}
 #limitedNumber + label {
   font-family: 'Montserrat-Regular';
   font-size: 14px;
@@ -344,6 +490,72 @@
   border-radius: 5px;
   display: none;
 }
+
+.Courses__videoplayer .plyr__controls__item {
+  display: none;
+}
+.Courses__videoplayer .plyr__control--overlaid {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.ratingFilterButton {
+  cursor: pointer;
+  outline: none;
+  border: 1px solid gray;
+  background-color: transparent;
+  border-radius: 100px;
+  margin-right: 20px;
+  padding: 0px 16px;
+  height: 30px;
+  color: gray;
+  font-family: 'Montserrat-Regular';
+}
+
+.percentageValues {
+  margin: 0px 15px;
+  font-size: 10px;
+  font-family: 'Montserrat-Regular';
+  color: #0000008a;
+}
+
+// .blackButtonCourses button {
+//   width: 100%;
+//   color: white;
+//   background-color: black !important;
+//   outline: none;
+//   border: transparent;
+//   font-family: Montserrat-Regular;
+//   font-size: 14px;
+// }
+.verySmallIcon {
+  font-size: 10px !important;
+  margin: 0px !important;
+  margin-right: 7px !important;
+  color: gray !important;
+}
+.previewVideoTextClass {
+  color: white;
+  margin: 0px;
+  font-family: 'Montserrat-Light';
+  font-size: 16px;
+  position: relative;
+  top: -35px;
+  width: 90%;
+  margin: auto;
+}
+.Courses__videoplayer svg {
+  background-color: white;
+}
+.activeRatingFilter {
+  background-color: gray;
+  color: white;
+}
+
+.iconContainerForContents {
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(243, 241, 241, 0.5);
+}
 @media screen and (min-width: 800px) and (max-height: 1000px) {
   .plyrComponent__myCourse {
     height: 90vh;
@@ -355,18 +567,28 @@
   max-height: 200px;
   text-align: center;
 }
+.scrollable {
+  overflow-y: scroll;
+}
+.scrollableTabsForCourses::-webkit-scrollbar {
+  display: none;
+}
 
 @media screen and (min-width: 575px) {
   .courseNameContainer {
-    width: 120% !important;
+    width: 134% !important;
   }
   .Scrollable__bestSeller {
     font-size: 0.6rem;
   }
 }
 
+// mobile
 @media screen and (max-width: 575px) {
   .Scrollable__courseCardSubHeading {
     width: 94%;
+  }
+  .Scrollable__bestSeller {
+    font-size: 9px !important;
   }
 }
