latest prod with course design

--- a/src/Components/Courses/Courses.scss
+++ b/src/Components/Courses/Courses.scss
@@ -150,12 +150,12 @@
   }
 
   &__container {
-    width: 80%;
+    width: 90%;
     margin: auto;
     margin-top: 5rem;
     padding-left: 10%;
     @include media-breakpoint-down(sm) {
-      width: 90%;
+      width: 100%;
     }
     @include media-breakpoint-down(md) {
       padding-left: 0;
@@ -183,7 +183,7 @@
     margin: auto;
     height: calc(100vh - 75px);
     @include media-breakpoint-down(md) {
-      width: 90%;
+      width: 100%;
     }
   }
 
@@ -201,11 +201,22 @@
       height: 350px;
     }
   }
+  &__lecturevideoplayer {
+    width: 100%;
+    background-color: black;
+
+    @include media-breakpoint-up(sm) {
+      // width: 100%;
+      // height: auto;
+      width: auto;
+      height: 350px !important;
+    }
+  }
   &__thumbnail {
     height: auto;
     display: flex;
     justify-content: center;
-    margin: auto;
+    margin: 0px;
     width: 100%;
 
     @include media-breakpoint-up(sm) {
@@ -282,11 +293,16 @@
   }
   &__Profile__Tabs {
     position: fixed;
+    // box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.29) !important;
     top: 0;
     left: 0;
     right: 0;
     background-color: white;
     z-index: 100;
+  }
+
+  &__Tabs {
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.29) !important;
   }
 
   &__twoButtons {
@@ -318,10 +334,10 @@
 .playIconCourse:hover {
   color: #ffffffd0 !important;
 }
+.postBtnClr {
+  background-color: var(--primary-blue);
+}
 
-// #idForScroll {
-//   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
-// }
 .verySmallGrayText {
   font-size: 10px;
   color: #0000008a;
@@ -368,13 +384,15 @@
   justify-content: flex-end;
 }
 .courseNameContainer {
-  display: flex;
-  width: 180% !important;
-  margin: auto 0px !important;
+  width: 90% !important;
+  margin: auto !important;
 }
 .verySmallText {
   font-size: 10px;
-  color: gray;
+  font-family: 'Montserrat-Regular';
+}
+.w-90 {
+  width: 90% !important;
 }
 .scrollableTabsForCourses .form-control::placeholder {
   color: rgb(182, 180, 180) !important;
@@ -418,6 +436,13 @@
   line-height: 18px;
 }
 
+.dropShadowForHeader {
+  margin: 0px;
+  padding: 0px;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.29);
+  position: relative;
+}
+
 .buyCourseBtn {
   width: 95%;
 }
@@ -439,6 +464,23 @@
   position: absolute !important;
   left: 20px !important;
 }
+
+.individualVideoThumbnail {
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+// .Courses__videoplayer .plyr--video {
+//   width: 100%;
+// }
+// @media screen and (max-width: 585px) {
+//   .Courses__lecturevideoplayer .plyr__video-embed iframe,
+//   .Courses__lecturevideoplayer .plyr__video-wrapper--fixed-ratio video {
+//     height: 350px !important;
+//   }
+// }
 
 .scrollableContentOfCourses {
   display: flex;
@@ -491,13 +533,6 @@
   display: none;
 }
 
-.Courses__videoplayer .plyr__controls__item {
-  display: none;
-}
-.Courses__videoplayer .plyr__control--overlaid {
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
 .ratingFilterButton {
   cursor: pointer;
   outline: none;
@@ -542,6 +577,8 @@
   top: -35px;
   width: 90%;
   margin: auto;
+  transition-duration: 0.3s;
+  transition-property: opacity;
 }
 .Courses__videoplayer svg {
   background-color: white;
@@ -555,6 +592,11 @@
   padding: 20px;
   border-radius: 10px;
   background-color: rgba(243, 241, 241, 0.5);
+}
+.videoContainerForContents {
+  object-fit: cover;
+  width: 64px;
+  height: 64px;
 }
 @media screen and (min-width: 800px) and (max-height: 1000px) {
   .plyrComponent__myCourse {
@@ -576,7 +618,7 @@
 
 @media screen and (min-width: 575px) {
   .courseNameContainer {
-    width: 134% !important;
+    width: 90% !important;
   }
   .Scrollable__bestSeller {
     font-size: 0.6rem;
@@ -590,5 +632,6 @@
   }
   .Scrollable__bestSeller {
     font-size: 9px !important;
+    width: 62px;
   }
 }
