--- a/src/Components/Common/QuestionTaker/QuestionTaker.scss
+++ b/src/Components/Common/QuestionTaker/QuestionTaker.scss
@@ -93,3 +93,19 @@
   height: 10px;
   width: 10px;
 }
+
+.testHasBeenSubmitted {
+  font-family: 'Montserrat-Regular';
+  margin-top: 40%;
+  font-size: 22px;
+}
+
+.testHasBeenSubContainer {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
